# raysee

./: .gitignore  CMakeLists.txt  clean.sh  prod_build.sh  prod_build_and_run.sh  test.ppm  test_build.sh  test_build_and_run.sh
lib/: CMakeLists.txt  canvas.c  canvas.h  matrices.c  matrices.h  rays.c  rays.h  spheres.c  spheres.h  transformations.c  transformations.h  tuples.c  tuples.h
main/: CMakeLists.txt  main.c
main/analog_clock/: analog_clock.c  analog_clock.h
main/create_canvas/: create_canvas.c  create_canvas.h
main/projectile_path/: projectile_path.c  projectile_path.h
test/: CMakeLists.txt  canvas_test.c  matrices_test.c  rays_test.c  sphere_test.c  transformations_test.c  tuples_test.c
